--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -19,3 +19,36 @@ table.dataTable tbody tr:not(.selected).status-accepted.odd, table.dataTable tbo
 table.dataTable tbody tr:not(.selected).status-rejected.odd, table.dataTable tbody tr:not(.selected).status-rejected.even {
     background-color: #fbcfcf;
 }
+
+.date-picker {
+  z-index: 202;
+}
+
+.date-picker-wrapper {
+  z-index: 201;
+
+}
+
+.date-picker-wrapper .gap {
+  z-index: 201;
+}
+
+.date-picker-wrapper .gap .gap-line .gap-1 {
+  z-index: 201;
+}
+
+.date-picker-wrapper .gap .gap-line .gap-2 {
+  z-index: 202;
+}
+
+.date-picker-wrapper .gap .gap-line .gap-3 {
+  z-index: 202;
+}
+
+.date-picker-wrapper .gap .gap-top-mask {
+  z-index: 203;
+}
+
+.date-picker-wrapper .gap .gap-bottom-mask {
+  z-index: 203;
+}
